--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.jpeg
+    - assets/images/logo.jpeg
+    - assets/images/dog.png
+    - assets/images/dog2.jpg
+    - assets/images/frog.png
    
      
 
